turns out I overengineered dialogs

--- a/HitomiScrollViewerWebApp/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/MainLayout.razor
@@ -21,7 +21,7 @@
             Icon="@Icons.Material.Filled.LightMode"
             ToggledIcon="@Icons.Material.Filled.DarkMode" />
         </MudAppBar>
-        <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+        <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2" Width="180px">
             <MudNavMenu>
                 <MudNavLink Href="/search" Icon="@Icons.Material.Filled.Search">Search</MudNavLink>
                 <MudNavLink Href="/browse" Icon="@Icons.Material.Filled.Folder">Browse</MudNavLink>
