removed unnecessary inherits ComponentBase

--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -1,5 +1,4 @@
-﻿@inherits ComponentBase
-@inject SearchService SearchService
+﻿@inject SearchService SearchService
 @inject PageConfigurationService PageConfigurationService
 
 <div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
