--- a/HitomiScrollViewerWebApp/Components/TagFilterSelector.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterSelector.razor
@@ -1,6 +1,4 @@
-﻿@inherits ComponentBase
-
-<div class="d-flex flex-column gap-4 @Class" style="@Style">
+﻿<div class="d-flex flex-column gap-4 @Class" style="@Style">
     @if (HeaderText != null)
     {
         <MudText Color="@HeaderColor" Typo="Typo.h6" Align="Align.Center">@HeaderText</MudText>
