--- a/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
@@ -1,5 +1,4 @@
-﻿@inherits ComponentBase
-@inject IJSRuntime JSRuntime
+﻿@inject IJSRuntime JSRuntime
 
 <div style="display: grid; grid-template-rows: auto 1fr; max-height: 100%; @Style" class="@Class">
     <MudAutocomplete T="TagDTO"
