--- a/HitomiScrollViewerWebApp/Pages/SearchPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SearchPage.razor
@@ -67,31 +67,9 @@
         </MudPaper>
     </div>
     <div id="search-filter-control-panel" style="flex: 1;" class="d-flex flex-column gap-2">
-        <MudSelect Label="Language"
-                   T="GalleryLanguageDTO"
-                   ToStringFunc="@(l => l.LocalName)"
-                   FullWidth
-                   Variant="Variant.Outlined"
-                   @bind-Value="SelectedLanguage">
-            @foreach (GalleryLanguageDTO l in PageConfigurationService.Languages) {
-                <MudSelectItem Value="@l" />
-            }
-        </MudSelect>
-        <MudSelect Label="Type"
-                   T="GalleryTypeDTO"
-                   ToStringFunc="@(t => t.Value)"
-                   FullWidth
-                   Variant="Variant.Outlined"
-                   @bind-Value="SelectedType">
-            @foreach (GalleryTypeDTO t in PageConfigurationService.Types) {
-                <MudSelectItem Value="@t" />
-            }
-        </MudSelect>
-        <MudTextField T="string"
-                      Label="Additional keywords"
-                      Variant="Variant.Outlined"
-                      @bind-Text="SearchKeywordText"
-                      Clearable />
+        <LTKSearchView @bind-SelectedLanguage="@SelectedLanguage"
+                       @bind-SelectedType="@SelectedType"
+                       @bind-SearchKeywordText="@SearchKeywordText" />
         <MudStack Row Spacing="2" StretchItems="StretchItems.Start" Class="my-2">
             <MudButton Class="py-2"
                        FullWidth
@@ -107,6 +85,7 @@
                 Clear
             </MudButton>
         </MudStack>
+        <hr class="mud-divider mb-2" />
         <MudStack class="overflow-y-auto" Spacing="2" Style="flex: 1;">
             @foreach (SearchFilterDTO model in SearchFilters) {
                 <div style="display: grid; grid-template-columns: 1fr min-content; gap: 4px;">
