--- a/HitomiScrollViewerWebApp/Pages/SearchPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/SearchPage.razor
@@ -12,7 +12,7 @@
 <PageTitle>Search</PageTitle>
 
 <div style="height: 100%;" class="d-flex pa-8 gap-4">
-    <div id="left-container" style="flex: 3;" class="d-flex flex-column gap-2">
+    <div id="search-page-left-container" style="flex: 3;" class="d-flex flex-column gap-2">
         <MudPaper id="tag-filter-editor-control-panel" Class="pa-8 gap-2" Style="height: 60%; display: grid; grid-template-rows: repeat(3, min-content)">
             <TagFilterEditor @ref="_tagFilterEditor"
                              TagFilters="@TagFilters"
@@ -40,15 +40,7 @@
                     <MudSwitch T="bool" Label="Auto save" Color="Color.Primary" @bind-Value="IsAutoSaveEnabled" />
                 </div>
             </div>
-            <div id="tag-search-chip-set-container"
-                 style="border: 1px solid var(--mud-palette-primary); border-radius: inherit;
-                        display: grid; grid-template-columns: repeat(@Tag.TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%">
-                @for (int i = 0; i < _tagSearchPanelModels.Length; i++) {
-                    <div style="grid-column: @(i + 1);">
-                        <TagSearchPanel Model="_tagSearchPanelModels[i]" />
-                    </div>
-                }
-            </div>
+            <TagSearchPanelCollection TagSearchPanelChipModels="@_tagSearchPanelChipModels" />
         </MudPaper>
         <MudPaper Class="d-flex gap-4 pa-4 overflow-y-auto" Style="height: 40%;">
             <PairedTagFilterSelector @ref="_includePairedTagFilterSelector"
