--- a/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor
@@ -1,8 +1,8 @@
 ﻿@inject TagService TagService
 
-<div class="tag-search-panel-collection"
-     style="border: 1px solid var(--mud-palette-primary); border-radius: inherit; display: grid;
-            grid-template-columns: repeat(@Tag.TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%">
+<div class="tag-search-panel-collection rounded"
+     style="border: 1px solid var(--mud-palette-primary); display: grid;
+            grid-template-columns: repeat(@Tag.TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%; @Style">
     @for (int i = 0; i < Tag.TAG_CATEGORIES.Length; i++) {
         <TagSearchPanel GridColumn="@(i + 1)"
                         Category="@Tag.TAG_CATEGORIES[i]"
