refactored custom mudchip and implemented saving tags on browse page

--- a/HitomiScrollViewerWebApp/Components/SearchFilterView.razor
+++ b/HitomiScrollViewerWebApp/Components/SearchFilterView.razor
@@ -1,4 +1,4 @@
-﻿<a class="search-filter" href="@Model.SearchLink" target="_blank">
+﻿<a class="search-filter" href="@Model.SearchLink" target="_blank" rel="noreferrer">
     <table style="border-collapse: collapse;">
         <tbody>
             <tr>
