--- a/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanel.razor
@@ -10,14 +10,17 @@
                      Clearable="true"
                      AdornmentIcon="@Icons.Material.Filled.Search"
                      ShowProgressIndicator="true"
+                     OpenOnFocus="false"
                      Value="@SearchValue"
                      ValueChanged="@OnSearchValueChanged"
                      Style="width: 90%; margin: auto; grid-row: 1;">
     </MudAutocomplete>
     <MudChipSet T="@(ChipModel<TagDTO>)"
                 Style="overflow-y: auto; grid-row: 2;"
-                SelectionMode="@SelectionMode.ToggleSelection"
-                SelectedColor="@Color.Primary">
+                SelectionMode="@SelectionMode.MultiSelection"
+                SelectedColor="@Color.Primary"
+                @bind-SelectedValues="@_selectedChipModels"
+                @onkeydown="@OnKeyDown">
         @foreach (ChipModel<TagDTO> model in ChipModels) {
             <CustomMudChip T="TagDTO"
                            Model="@model"
