--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -7,7 +7,8 @@
 
 <div class="d-flex pa-8 gap-4">
     <TagSearchPanelCollection Style="flex: 3;"
-                              TagSearchPanelChipModels="@_tagSearchPanelChipModels" />
+                              TagSearchPanelChipModels="@_tagSearchPanelChipModels"
+                              ChipModelsChanged="@OnChipModelsChanged" />
     <LTKSearchView Style="flex: 1;"
                    @bind-SelectedLanguage="@SelectedLanguage"
                    @bind-SelectedType="@SelectedType"
