Implemented basic DownloadItem and DownloadPage structure

--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -5,12 +5,14 @@
 
 <PageTitle>Browse</PageTitle>
 
-<div class="d-flex pa-8 gap-4">
-    <TagSearchPanelCollection Style="flex: 3;"
-                              TagSearchPanelChipModels="@_tagSearchPanelChipModels"
-                              ChipModelsChanged="@OnChipModelsChanged" />
-    <LTKSearchView Style="flex: 1;"
-                   @bind-SelectedLanguage="@SelectedLanguage"
-                   @bind-SelectedType="@SelectedType"
-                   @bind-SearchKeywordText="@SearchKeywordText" />
+<div style="height: 100%">
+    <div class="d-flex pa-8 gap-4">
+        <TagSearchPanelCollection Style="flex: 3;"
+                                  TagSearchPanelChipModels="@_tagSearchPanelChipModels"
+                                  ChipModelsChanged="@OnChipModelsChanged" />
+        <LTKSearchView Style="flex: 1;"
+                       @bind-SelectedLanguage="@SelectedLanguage"
+                       @bind-SelectedType="@SelectedType"
+                       @bind-SearchKeywordText="@SearchKeywordText" />
+    </div>
 </div>
