many things done and more things to implement

--- a/HitomiScrollViewerWebApp/Pages/DownloadPage.razor
+++ b/HitomiScrollViewerWebApp/Pages/DownloadPage.razor
@@ -38,9 +38,9 @@
             </MudButton>
         </div>
         <div class="d-flex flex-column gap-4 overflow-y-auto">
-            <DownloadItem />
-            <DownloadItem />
-            <DownloadItem />
+            <DownloadItemView />
+            <DownloadItemView />
+            <DownloadItemView />
         </div>
     </div>
 </div>
