welp this is a big commit

--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div style="@Style; width: @Width; height: @Height;" class="@Class">
     <MudText Typo="Typo.h2">@Gallery.Title</MudText>
     <div class="d-flex">
         @foreach (string url in _imageUrls)
