--- a/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
+++ b/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
@@ -1,13 +1,17 @@
 ﻿<MudPaper style="display: grid; grid-template-columns: 240px auto 120px" class="pa-4 gap-4" Outlined >
     <div>
         <MudText>@ViewModel.DownloadItem.GalleryId</MudText>
-        <MudText>@ViewModel.DownloadItem.Title</MudText>
+        <MudText>@ViewModel.Gallery?.Title</MudText>
     </div>
     <div class="align-self-end">
-        <MudProgressLinear Color="Color.Primary" Value="@ViewModel.DownloadItem.Progress" Min="0" Max="@ViewModel.DownloadItem.TotalCount" Class="mb-1" />
+        <MudProgressLinear Color="Color.Primary"
+                           Value="@ViewModel.Progress"
+                           Min="0"
+                           Max="@(ViewModel.Gallery == null ? 0 : ViewModel.Gallery.GalleryImagesCount)"
+                           Class="mb-1" />
         <div class="d-flex">
             <MudText Style="flex: 1 1 auto;">@ViewModel.StatusMessage</MudText>
-            <MudText Style="white-space: nowrap;">@(ViewModel.DownloadItem.Progress.ToString() + '/' + ViewModel.DownloadItem.TotalCount.ToString())</MudText>
+            <MudText Style="white-space: nowrap;">@(ViewModel.Progress.ToString() + '/' + (ViewModel.Gallery == null ? 0 : ViewModel.Gallery.GalleryImagesCount).ToString())</MudText>
         </div>
     </div>
     <div class="d-flex gap-4">
