--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/browse"
 @inject BrowseService BrowseService
 @inject PageConfigurationService PageConfigurationService
+@inject GalleryService GalleryService
 @inject IJSRuntime JsRuntime
 
 <PageTitle>Browse</PageTitle>
@@ -15,4 +16,27 @@
                        @bind-SelectedType="@SelectedType"
                        @bind-SearchKeywordText="@SearchKeywordText" />
     </div>
+    <div class="d-flex justify-space-between">
+        <MudButton Variant="Variant.Outlined"
+                   StartIcon="@Icons.Material.Filled.Sort">
+            Sort
+        </MudButton>
+        <MudPagination ShowFirstButton ShowLastButton
+                       MiddleCount="8"
+                       Count="@_pageCount"
+                       Selected="@_page"
+                       SelectedChanged="@OnPageNumChanged" />
+        <MudNumericField T="int"
+                         Label="Items "
+                         Variant="Variant.Outlined"
+                         Min="1" Max="24"
+                         @bind-Value="@ItemsPerPage" />
+    </div>
+    <MudGrid>
+        @foreach (GalleryFullDTO gallery in _galleries) {
+            <MudItem xs="12" sm="6" md="4" lg="3" xl="2" xxl="1">
+                <GalleryBrowseItem Gallery="@gallery"  />
+            </MudItem>
+        }
+    </MudGrid>
 </div>
