--- a/HitomiScrollViewerWebApp/_Imports.razor
+++ b/HitomiScrollViewerWebApp/_Imports.razor
@@ -12,6 +12,7 @@
 @using HitomiScrollViewerWebApp.Components
 @using HitomiScrollViewerWebApp.Models
 @using HitomiScrollViewerWebApp.Services
+@using HitomiScrollViewerWebApp.ViewModels
 @using HitomiScrollViewerData
 @using HitomiScrollViewerData.Entities
 @using HitomiScrollViewerData.DTOs
