--- a/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
+++ b/HitomiScrollViewerWebApp/Pages/BrowsePage.razor
@@ -35,7 +35,7 @@
     <MudGrid>
         @foreach (GalleryFullDTO gallery in _galleries) {
             <MudItem xs="12" sm="6" md="4" lg="3" xl="2" xxl="1">
-                <GalleryBrowseItem Gallery="@gallery"  />
+                <GalleryBrowseItem Gallery="@gallery" Height="@MIN_ITEM_HEIGHT" />
             </MudItem>
         }
     </MudGrid>
