--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -1,7 +1,4 @@
-﻿@inject SearchService SearchService
-@inject PageConfigurationService PageConfigurationService
-
-<div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
+﻿<div class="gap-4 align-center" style="display: grid; grid-template-columns: auto auto 1fr auto auto;">
     <MudFab Color="Color.Primary"
             StartIcon="@Icons.Material.Filled.Add"
             OnClick="@OnCreateButtonClicked" />
@@ -14,7 +11,8 @@
                Label="Tag Filter"
                @bind-Value="@CurrentTagFilter"
                ToStringFunc="@(tf => tf.Name)"
-               Class="tag-filter-selector">
+               Class="tag-filter-selector"
+               FullWidth>
         @foreach (TagFilterDTO tagFilter in TagFilters) {
             <MudSelectItem Value="tagFilter" />
         }
