--- a/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
+++ b/HitomiScrollViewerWebApp/Components/DownloadItemView.razor
@@ -16,8 +16,9 @@
     </div>
     <div class="d-flex gap-4">
         <MudIconButton Icon="@ControlButtonIcon"
-                       Disabled="@(ViewModel.Status is DownloadStatus.Pending or DownloadStatus.Completed)"/>
+                       Disabled="@(ViewModel.Status is DownloadStatus.Pending or DownloadStatus.Completed)"
+                       OnClick="@OnActionButtonClick" />
         <MudIconButton Icon="@Icons.Material.Filled.Delete"
-                       OnClick="@(() => DownloadService.RemoveDownload(ViewModel.GalleryId))" />
+                       OnClick="@OnDeleteButtonClick" />
     </div>
 </MudPaper>
