--- a/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor
@@ -4,9 +4,10 @@
      style="border: 1px solid var(--mud-palette-primary); display: grid;
             grid-template-columns: repeat(@Tag.TAG_CATEGORIES.Length, 1fr); grid-template-rows: 100%; @Style">
     @for (int i = 0; i < Tag.TAG_CATEGORIES.Length; i++) {
-        <TagSearchPanel GridColumn="@(i + 1)"
-                        Category="@Tag.TAG_CATEGORIES[i]"
-                        ChipModels="@TagSearchPanelChipModels[i]"
-                        ChipModelsChanged="@ChipModelsChanged" />
+        <div style="grid-column: @(i + 1); max-height: 100%;">
+            <TagSearchPanel Category="@Tag.TAG_CATEGORIES[i]"
+                            ChipModels="@TagSearchPanelChipModels[i]"
+                            ChipModelsChanged="@ChipModelsChanged" />
+        </div>
     }
 </div>
