--- a/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
+++ b/HitomiScrollViewerWebApp/Components/GalleryBrowseItem.razor
@@ -1,23 +1,30 @@
-﻿<div style="@Style; width: @Width; height: @Height;" class="@Class">
-    <MudText Typo="Typo.h2">@Gallery.Title</MudText>
-    <div class="d-flex">
-        @foreach (string url in _imageUrls)
-        {
-            <img src="@url" loading="lazy" />
-        }
-    </div>
-    <table style="border-collapse: collapse;">
-        <tbody>
-            @foreach (var pair in _tagCollections) {
-                <tr>
-                    <td><MudText>@pair.Key</MudText></td>
-                    <td class="d-flex flex-wrap gap-1">
-                        @foreach (TagDTO tag in pair.Value) {
-                            <span style="" class="rounded px-1">@tag.Value</span>
-                        }
-                    </td>
-                </tr>
+﻿<div class="gallery-browse-item">
+    <MudPaper Class="pa-2 d-flex flex-column gap-2" Height="@Height" Style="overflow-y: auto; overflow-x: hidden;" Outlined>
+        <MudText Typo="Typo.h5">@Gallery.Title</MudText>
+        <div class="d-flex" style="width: 100%; height: 150px;">
+            @for (int i = 0; i < MAX_THUMBNAIL_IMAGES; i++)
+            {
+                <picture>
+                    @for (int j = 0; j < Constants.IMAGE_FILE_EXTS.Length - 1; j++) {
+                        <source srcset=@(_imageUrls[i,j]) type=@($"image/{Constants.IMAGE_FILE_EXTS[j]}") />
+                    }
+                    <img src=@(_imageUrls[i,Constants.IMAGE_FILE_EXTS.Length - 1]) style="height: 100%" />
+                </picture>
             }
-        </tbody>
-    </table>
+        </div>
+        <table style="border-collapse: collapse; width: 100%;" class="tag-collection">
+            <tbody>
+                @foreach (var pair in _tagCollections) {
+                    <tr>
+                        <td><MudText>@pair.Key</MudText></td>
+                        <td class="d-flex flex-wrap gap-1">
+                            @foreach (TagDTO tag in pair.Value) {
+                                <span class="mud-chip-filled rounded px-1">@tag.Value</span>
+                            }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </MudPaper>
 </div>
