--- a/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor.css
+++ b/HitomiScrollViewerWebApp/Components/TagSearchPanelCollection.razor.css
@@ -1,3 +1,3 @@
-﻿.tag-search-panel-collection > ::deep .tag-search-panel:not(:first-child) {
+﻿.tag-search-panel-collection > div:not(:first-child) {
     border-left: 1px solid var(--mud-palette-primary);
 }
